--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "guidovanbiemen/laravel-whoops": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
